--- a/client/blocks/post-status/style.scss
+++ b/client/blocks/post-status/style.scss
@@ -4,17 +4,9 @@
 	display: inline-block;
 }
 
-.post-status__icon,
-.post-status__text {
-	vertical-align: middle;
-}
-
 .post-status__icon {
 	margin-right: 8px;
-}
-
-.post-status__text {
-	line-height: 1;
+	vertical-align: text-top;
 }
 
 .post-status.is-pending {
