--- a/client/my-sites/post-type-list/post-action-counts/style.scss
+++ b/client/my-sites/post-type-list/post-action-counts/style.scss
@@ -2,8 +2,6 @@
 	display: inline-block;
 	list-style: none;
 	margin: 0;
-	vertical-align: top;
-	line-height: 1;
 }
 
 .post-action-counts li {
